# API_Coursework

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 20260317_0001_initial_schema.py  20260319_000001_initial_schema.py  20260319_000002_add_station_reference_codes.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/endpoints/: analytics.py  incidents.py  routes.py  stations.py
app/core/: config.py  database.py  errors.py  exceptions.py  security.py
app/db/: base.py  models.py  session.py
app/mcp/: __init__.py  auth.py  server.py
app/models/: __init__.py  enums.py  incident.py  journey_record.py  route.py  station.py
app/routers/: analytics.py  incidents.py  routes.py  stations.py
app/schemas/: analytics.py  incident.py  route.py  station.py
app/services/: __init__.py  analytics_service.py  darwin_snapshot_service.py  dtd_reference_service.py  import_types.py  incident_service.py  journey_import_service.py  kb_station_enrichment_service.py  route_distance_service.py  route_import_service.py  route_naming_service.py  station_import_service.py
docs/: api-documentation.md  api_documentation.md  genai-declaration.md  mcp_server.md  presentation-outline.md  presentation.pptx  technical-report-outline.md  technical_report.md
docs/conversations/: cursor_codebase_review_for_coursework_i.md  cursor_final_year_coursework_project_ov.md  cursor_technical_report_overview_expans.md
scripts/: backfill_route_distances.py  generate_api_docs_pdf.py  generate_api_pdf.py  generate_presentation.py  generate_report_pdf.py  import_darwin_snapshot.py  import_journeys.py  import_kb_stations.py  import_routes.py  import_stations.py  import_timetable_references.py  run_mcp_server.py  seed_reference_data.py
tests/: conftest.py  test_analytics.py  test_analytics_api.py  test_darwin_snapshot_service.py  test_dtd_reference_service.py  test_error_consistency_api.py  test_import_services.py  test_incident_filters_api.py  test_incidents.py  test_incidents_api.py  test_kb_station_enrichment_service.py  test_mcp_server.py  test_mcp_supporting_units.py  test_public_analytics_lookup_api.py  test_public_lookup_api.py  test_reference_coverage_api.py  test_route_distance_service.py  test_route_naming_service.py  test_routes.py  test_security_hardening_api.py  test_stations.py
