[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-api-coursework"
version = "0.1.0"
description = "UK rail reliability and delay analytics API for COMP3011 coursework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "fastapi>=0.116.1",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.9",
  "python-dotenv>=1.1.1",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
