[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-api-coursework"
version = "0.1.0"
description = "UK rail reliability and delay analytics API for COMP3011 coursework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "fastapi>=0.116.1",
  "mcp>=1.26.0",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.9",
  "python-dotenv>=1.1.1",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
skip_covered = false
show_missing = true

[project.scripts]
rail-api-mcp = "app.mcp.server:main"

[tool.setuptools.packages.find]
include = ["app*"]
